# xmsmesher

./: .appveyor.yml  .gitignore  .travis.yml  CMakeLists.txt  README.md  build.py  build.toml  conanfile.py  generateDocumentationAndDeploy.sh
.github/workflows/: Linux-CI.yaml  Mac-CI.yaml  Windows-CI.yaml  XmsMesher-CI.yaml
.travis/: install.sh
Doxygen/: Doxyfile  DoxygenMainpage.md  Meshing_Tutorial.md  Redistribution_Tutorial.md
_package/: setup.py
_package/tests/unit_tests/: mesh_api_pyt.py  mesh_utils_pyt.py  multi_poly_mesher_io_pyt.py  poly_redistribute_points_pyt.py
_package/xms/mesher/: __init__.py
_package/xms/mesher/api/: mesh.py
_package/xms/mesher/meshing/: __init__.py  mesh_utils.py  multi_poly_mesher_io.py  poly_input.py  poly_redistribute_points.py  refine_point.py
dev/: setenv.bat  setenv.sh
examples/: MeshSimplePolygon.html  xms.yml
examples/MeshSanDiego/: MeshSanDiego.ipynb  meshing_tools.py
examples/MeshScalarPaving/: MeshScalarPaving.ipynb  meshing_tools.py
examples/MeshSimplePolygon/: MeshSimplePolygon.ipynb  square_holes_polys.dbf  square_holes_polys.shp  square_holes_polys.shx
examples/MeshSimplePolygon/output/: mesh_api.xmugrid  ugrid_1.xmugrid  ugrid_2.xmugrid
examples/MeshUtils/: MeshUtils.ipynb
examples/MeshUtils/output/: out_file.2dm  ugrid_intersect.xmugrid
pydocs/source/: conf.py  getting_started.rst  index.rst
pydocs/source/modules/meshing/: MeshUtils.rst  MultiPolyMesherIo.rst  PolyInput.rst  PolyRedistributePts.rst  RefinePoint.rst
test_files/Tutorial_Meshing/: Example_Breakline_base.2dm  Example_ComplexPolygon_base.2dm  Example_ConstantSmooth2_base.2dm  Example_ConstantSmooth_baseMacOsX.2dm  Example_MultiPolys_base.2dm  Example_MultiPolys_baseBoostGeom174.2dm  Example_MultiPolys_baseMacOsX.2dm  Example_QuadBlossom_quadUGridImproved2_base.txt  Example_QuadBlossom_quadUGridImproved2_out.txt  Example_QuadBlossom_quadUGridImproved_base.txt  Example_QuadBlossom_quadUGrid_base.txt  Example_QuadBlossom_quadUGrid_out.txt  Example_RefinePoints_base.2dm  Example_RefinePoints_baseMacOsX.2dm  Example_ScalarPaving_base.2dm  Example_SimplePolygon_base.2dm
test_files/meshing/: CasePatch6_base.2dm  CasePatch6_baseMacOsX.2dm  CasePatch6a_base.2dm  CasePatch6b_base.2dm  CasePatch7.txt  CasePatch7_base.2dm  CasePaveGeo_base.2dm  CasePaveGeo_baseMacOsX.2dm  CasePaveSanDiegoSpringRelax_base.2dm  CasePaveSanDiegoSpringRelax_baseMacOsX.2dm  CasePaveSanDiego_base.2dm  CaseRefine01.txt  CaseRefine01_base.2dm  CaseRefine01_baseMacOsX.2dm  CaseRefine01_no_interior.txt  CaseRefine01_no_interior_base.2dm  CaseTestSeedPointsPolygonWithHole_base.2dm  CaseTestSeedPoints_base.2dm  CaseTestSeedPoints_baseMacOsX.2dm  CaseTransitionToConstSize_base.2dm  bug11299_baseMacOsX.2dm  bug11646_base.2dm  bug11646_baseBoostGeom174.2dm  bug12780.txt  bug12780_base.2dm  bug12780_baseMacOsX.2dm  bug13701.txt  bug13701_a.txt  bug13701_a_base.2dm  bug13701_a_baseMacOsX.2dm  bug13701_base.2dm  bug14901.txt  bug14901_base.2dm  bug14901_baseMacOsX.2dm  bug15183.txt  bug15183_base.2dm  bug15186.txt  bug15186_base.2dm  bug15186_baseMacOsX.2dm  bug15246.txt  (+16 more)
test_files/meshing/internalFeatures/: case0_base.2dm  case1_base.2dm  case1_baseMacOsX.2dm  case2_base.2dm  case3.map  case3.txt  case3_base.2dm  case3_baseMacOsX.2dm
xmsmesher/meshing/: MeMeshUtils.cpp  MeMeshUtils.h  MeMeshUtils.t.h  MeMultiPolyMesher.cpp  MeMultiPolyMesher.h  MeMultiPolyMesherIo.h  MeMultiPolyTo2dm.cpp  MeMultiPolyTo2dm.h  MeMultiPolyTo2dm.t.h  MePolyMesher.cpp  MePolyRedistributePts.cpp  MePolyRedistributePts.t.h
xmsmesher/meshing/detail/: MeBadQuadRemover.cpp  MeBadQuadRemover.h  MeIntersectPolys.cpp  MeIntersectPolys.h  MePointConnectionFixer.cpp  MePointConnectionFixer.h  MePointConnectionFixer.t.h  MePolyCleaner.cpp  MePolyOffsetter.cpp  MePolyOffsetter.h  MePolyPatcher.cpp  MePolyPaverToMeshPts.cpp  MePolyPts.cpp  MePolyRedistributePtsCurvature.cpp  MeQuadBlossom.cpp  MeQuadBlossom.h  MeRefinePtsToPolys.cpp  MeRelaxer.cpp  MeRelaxer.h  MeWeightMatcher.cpp
xmsmesher/python/: xmsmesh_py.cpp  xmsmesher_py.cpp
xmsmesher/python/meshing/: MeMeshUtils_py.cpp  MeMeshUtils_pyt.py  MeMultiPolyMesherIo_py.cpp  MeMultiPolyMesherIo_pyt.py  MePolyRedistributePts_py.cpp  MePolyRedistributePts_pyt.py  meshing_py.cpp  meshing_py.h
xmsmesher/testing/: TestTools.cpp  TestTools.h
xmsmesher/tutorial/: TutMeshing.cpp
